info blocks fix

--- a/charts.html
+++ b/charts.html
@@ -226,6 +226,71 @@
                         </div>
                     </li>
                     <li class="charts-form__tab-item charts-form__tab-item_workload">
+                        <div class="charts-form__date-filter-wrapper">
+                            <div class="charts-form__date-filter-container">
+                                <label for="date_from" class="charts-form__date-filter-label">Дата с</label>
+                                <input type="date" name="date_from" id="date_from"
+                                    class="charts-form__date-filter-date">
+                            </div>
+                            <div class="charts-form__date-filter-container">
+                                <label for="date_to" class="charts-form__date-filter-label">Дата по</label>
+                                <input type="date" name="date_to" id="date_to" class="charts-form__date-filter-date">
+                            </div>
+                        </div>
+                        <ul class="charts-form__info-list">
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Объект</p>
+                                <p class="charts-form__info-text">CAT 3</p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Водители</p>
+                                <p class="charts-form__info-text">1</p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Гос. номер</p>
+                                <p class="charts-form__info-text">CAT 3</p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Гаражный номер</p>
+                                <p class="charts-form__info-text">CAT 3</p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Описание</p>
+                                <p class="charts-form__info-text"></p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Количество дней</p>
+                                <p class="charts-form__info-text">3</p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Общая длительность смен, дд:чч:мм</p>
+                                <p class="charts-form__info-text">33:00:39</p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Пробег, км.</p>
+                                <p class="charts-form__info-text">137.7</p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Удары</p>
+                                <p class="charts-form__info-text">0 км</p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Максимальная сила удара, G</p>
+                                <p class="charts-form__info-text">0</p>
+                            </li>
+                            <li class="charts-form__info-item">
+                                <p class="charts-form__info-caption">Максимальная скорость, км/ч</p>
+                                <p class="charts-form__info-text">14.7</p>
+                            </li>
+                        </ul>
+                        <section class="charts-form__first-start  first-start">
+                            <p class="first-start__title">Первый запуск</p>
+                            <ul class="first-start__list">
+                                <li class="first-start__item">
+
+                                </li>
+                            </ul>
+                        </section>
                         <div class="chart chart_bar">
                         </div>
                     </li>
