--- a/charts.html
+++ b/charts.html
@@ -157,52 +157,52 @@
                         </table>
                         <ul class="charts-form__info-list">
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Общее время анализа</p>
-                                <p class="charts-form__info-text">48:00:00</p>
+                                <p class="charts-form__info-title">Общее время анализа</p>
+                                <p class="charts-form__info-value">48:00:00</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Время на стоянках</p>
-                                <p class="charts-form__info-text">11:13:51 (25.7%)</p>
+                                <p class="charts-form__info-title">Время на стоянках</p>
+                                <p class="charts-form__info-value">11:13:51 (25.7%)</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Время в движении</p>
-                                <p class="charts-form__info-text">31:38:45 (72.4%)</p>
+                                <p class="charts-form__info-title">Время в движении</p>
+                                <p class="charts-form__info-value">31:38:45 (72.4%)</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Время в разрыве</p>
-                                <p class="charts-form__info-text">00:51:01 (1.9%)</p>
+                                <p class="charts-form__info-title">Время в разрыве</p>
+                                <p class="charts-form__info-value">00:51:01 (1.9%)</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Время работы двигателя</p>
-                                <p class="charts-form__info-text">33:01:15 (68.8%)</p>
+                                <p class="charts-form__info-title">Время работы двигателя</p>
+                                <p class="charts-form__info-value">33:01:15 (68.8%)</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Время работы двигателя на хх</p>
-                                <p class="charts-form__info-text">00:00:36 (0%)</p>
+                                <p class="charts-form__info-title">Время работы двигателя на хх</p>
+                                <p class="charts-form__info-value">00:00:36 (0%)</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Время работы двигателя под нагрузкой</p>
-                                <p class="charts-form__info-text">33:00:39 (68.8%)</p>
+                                <p class="charts-form__info-title">Время работы двигателя под нагрузкой</p>
+                                <p class="charts-form__info-value">33:00:39 (68.8%)</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Общий пробег</p>
-                                <p class="charts-form__info-text">97.2 км</p>
+                                <p class="charts-form__info-title">Общий пробег</p>
+                                <p class="charts-form__info-value">97.2 км</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Пробег в разрыве</p>
-                                <p class="charts-form__info-text">0 км</p>
+                                <p class="charts-form__info-title">Пробег в разрыве</p>
+                                <p class="charts-form__info-value">0 км</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Средняя скорость</p>
-                                <p class="charts-form__info-text">3.6 км/ч</p>
+                                <p class="charts-form__info-title">Средняя скорость</p>
+                                <p class="charts-form__info-value">3.6 км/ч</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Максимальная скорость</p>
-                                <p class="charts-form__info-text">14.7 км/ч</p>
+                                <p class="charts-form__info-title">Максимальная скорость</p>
+                                <p class="charts-form__info-value">14.7 км/ч</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Расчетный расход</p>
-                                <p class="charts-form__info-text">709.95 л</p>
+                                <p class="charts-form__info-title">Расчетный расход</p>
+                                <p class="charts-form__info-value">709.95 л</p>
                             </li>
                         </ul>
                         <div class="charts-form__summary-container">
@@ -239,60 +239,136 @@
                         </div>
                         <ul class="charts-form__info-list">
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Объект</p>
-                                <p class="charts-form__info-text">CAT 3</p>
+                                <p class="charts-form__info-title">Объект</p>
+                                <p class="charts-form__info-value">CAT 3</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Водители</p>
-                                <p class="charts-form__info-text">1</p>
+                                <p class="charts-form__info-title">Водители</p>
+                                <p class="charts-form__info-value">1</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Гос. номер</p>
-                                <p class="charts-form__info-text">CAT 3</p>
+                                <p class="charts-form__info-title">Гос. номер</p>
+                                <p class="charts-form__info-value">CAT 3</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Гаражный номер</p>
-                                <p class="charts-form__info-text">CAT 3</p>
+                                <p class="charts-form__info-title">Гаражный номер</p>
+                                <p class="charts-form__info-value">CAT 3</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Описание</p>
-                                <p class="charts-form__info-text"></p>
+                                <p class="charts-form__info-title">Описание</p>
+                                <p class="charts-form__info-value"></p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Количество дней</p>
-                                <p class="charts-form__info-text">3</p>
+                                <p class="charts-form__info-title">Количество дней</p>
+                                <p class="charts-form__info-value">3</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Общая длительность смен, дд:чч:мм</p>
-                                <p class="charts-form__info-text">33:00:39</p>
+                                <p class="charts-form__info-title">Общая длительность смен, дд:чч:мм</p>
+                                <p class="charts-form__info-value">33:00:39</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Пробег, км.</p>
-                                <p class="charts-form__info-text">137.7</p>
+                                <p class="charts-form__info-title">Пробег, км.</p>
+                                <p class="charts-form__info-value">137.7</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Удары</p>
-                                <p class="charts-form__info-text">0 км</p>
+                                <p class="charts-form__info-title">Удары</p>
+                                <p class="charts-form__info-value">0 км</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Максимальная сила удара, G</p>
-                                <p class="charts-form__info-text">0</p>
+                                <p class="charts-form__info-title">Максимальная сила удара, G</p>
+                                <p class="charts-form__info-value">0</p>
                             </li>
                             <li class="charts-form__info-item">
-                                <p class="charts-form__info-caption">Максимальная скорость, км/ч</p>
-                                <p class="charts-form__info-text">14.7</p>
+                                <p class="charts-form__info-title">Максимальная скорость, км/ч</p>
+                                <p class="charts-form__info-value">14.7</p>
                             </li>
                         </ul>
-                        <section class="charts-form__first-start  first-start">
+                        <section class="charts-form__first-start first-start">
                             <p class="first-start__title">Первый запуск</p>
                             <ul class="first-start__list">
                                 <li class="first-start__item">
-
+                                    <div class="first-start__date">
+                                        <p class="first-start__date-caption">Дата</p>
+                                        <p class="first-start__date-value">2020-09-04</p>
+                                    </div>
+                                    <div class="first-start__time">
+                                        <p class="first-start__time-caption">чч:мм:сс</p>
+                                        <p class="first-start__time-value">00:00:00</p>
+                                    </div>
+                                </li>
+                                <li class="first-start__item">
+                                    <div class="first-start__date">
+                                        <p class="first-start__date-caption">Дата</p>
+                                        <p class="first-start__date-value">2020-09-05</p>
+                                    </div>
+                                    <div class="first-start__time">
+                                        <p class="first-start__time-caption">чч:мм:сс</p>
+                                        <p class="first-start__time-value">00:00:00</p>
+                                    </div>
+                                </li>
+                                <li class="first-start__item">
+                                    <div class="first-start__date">
+                                        <p class="first-start__date-caption">Дата</p>
+                                        <p class="first-start__date-value">2020-09-06</p>
+                                    </div>
+                                    <div class="first-start__time">
+                                        <p class="first-start__time-caption">чч:мм:сс</p>
+                                        <p class="first-start__time-value">00:00:00</p>
+                                    </div>
                                 </li>
                             </ul>
                         </section>
-                        <div class="chart chart_bar">
-                        </div>
+                        <section class="charts-form__stats stats">
+                            <ul class="stats__list">
+                                <li class="stats__item">
+                                    <p class="stats__title">Работа</p>
+                                    <div class="stats__percent">
+                                        <p class="stats__caption">%</p>
+                                        <p class="stats__value">63.2</p>
+                                    </div>
+                                    <div class="stats__time">
+                                        <p class="stats__caption">чч:мм:сс</p>
+                                        <p class="stats__value">00:00:00</p>
+                                    </div>
+                                </li>
+                                <li class="stats__item">
+                                    <p class="stats__title">Холостой ход</p>
+                                    <div class="stats__percent">
+                                        <p class="stats__caption">%</p>
+                                        <p class="stats__value">63.2</p>
+                                    </div>
+                                    <div class="stats__time">
+                                        <p class="stats__caption">чч:мм:сс</p>
+                                        <p class="stats__value">00:00:00</p>
+                                    </div>
+                                </li>
+                                <li class="stats__item">
+                                    <p class="stats__title">Моточасы</p>
+                                    <div class="stats__percent">
+                                        <p class="stats__caption">%</p>
+                                        <p class="stats__value">63.2</p>
+                                    </div>
+                                    <div class="stats__time">
+                                        <p class="stats__caption">чч:мм:сс</p>
+                                        <p class="stats__value">00:00:00</p>
+                                    </div>
+                                </li>
+                                <li class="stats__item">
+                                    <p class="stats__title">Стоянка</p>
+                                    <div class="stats__percent">
+                                        <p class="stats__caption">%</p>
+                                        <p class="stats__value">63.2</p>
+                                    </div>
+                                    <div class="stats__time">
+                                        <p class="stats__caption">чч:мм:сс</p>
+                                        <p class="stats__value">00:00:00</p>
+                                    </div>
+                                </li>
+                            </ul>   
+                        </section>
+                        <section class="chart chart_bar">
+                            <div id="chart-bar" class="chart__bar"></div>
+                        </section>
                     </li>
                 </ul>
             </section>
