--- a/charts.html
+++ b/charts.html
@@ -43,7 +43,7 @@
                         <p class="charts-form__status-text">Иванов Иван Иванович</p>
                     </div>
                 </div>
-                <div class="charts-form__status-wrapper">
+                <div class="charts-form__status-wrapper charts-form__status-wrapper_charts">
                     <div class="chart chart_pie">
                         <p class="chart__caption">Диаграмма за месяц</p>
                         <div id="chart-pie_month" class="chart__pie"></div>
@@ -87,74 +87,77 @@
                                 <input type="date" name="date_to" id="date_to" class="charts-form__date-filter-date">
                             </div>
                         </div>
-                        <table class="charts-form__table log-table">
-                            <tr class="log-table__row">
-                                <th class="log-table__cell log-table__cell_header">Номер</th>
-                                <th class="log-table__cell log-table__cell_header">Действие</th>
-                                <th class="log-table__cell log-table__cell_header">Начало</th>
-                                <th class="log-table__cell log-table__cell_header">Конец</th>
-                                <th class="log-table__cell log-table__cell_header">Длительность</th>
-                                <th class="log-table__cell log-table__cell_header">Работа двигателя на хх</th>
-                                <th class="log-table__cell log-table__cell_header">Работа двигателя под нагрузкой</th>
-                                <th class="log-table__cell log-table__cell_header">Скорость средняя</th>
-                                <th class="log-table__cell log-table__cell_header">Пробег</th>
-                            </tr>
-                            <tr class="log-table__row">
-                                <td class="log-table__cell">1</td>
-                                <td class="log-table__cell">parking</td>
-                                <td class="log-table__cell">15:00</td>
-                                <td class="log-table__cell">23:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">10 км/ч</td>
-                                <td class="log-table__cell">20 км</td>
-                            </tr>
-                            <tr class="log-table__row">
-                                <td class="log-table__cell">2</td>
-                                <td class="log-table__cell">parking</td>
-                                <td class="log-table__cell">15:00</td>
-                                <td class="log-table__cell">23:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">10 км/ч</td>
-                                <td class="log-table__cell">20 км</td>
-                            </tr>
-                            <tr class="log-table__row">
-                                <td class="log-table__cell">3</td>
-                                <td class="log-table__cell">parking</td>
-                                <td class="log-table__cell">15:00</td>
-                                <td class="log-table__cell">23:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">10 км/ч</td>
-                                <td class="log-table__cell">20 км</td>
-                            </tr>
-                            <tr class="log-table__row">
-                                <td class="log-table__cell">4</td>
-                                <td class="log-table__cell">parking</td>
-                                <td class="log-table__cell">15:00</td>
-                                <td class="log-table__cell">23:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">10 км/ч</td>
-                                <td class="log-table__cell">20 км</td>
-                            </tr>
-                            <tr class="log-table__row">
-                                <td class="log-table__cell">5</td>
-                                <td class="log-table__cell">parking</td>
-                                <td class="log-table__cell">15:00</td>
-                                <td class="log-table__cell">23:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">08:00</td>
-                                <td class="log-table__cell">10 км/ч</td>
-                                <td class="log-table__cell">20 км</td>
-                            </tr>
-                        </table>
+                        <div class="charts-form__table-container">
+                            <table class="charts-form__table log-table">
+                                <tr class="log-table__row">
+                                    <th class="log-table__cell log-table__cell_header">Номер</th>
+                                    <th class="log-table__cell log-table__cell_header">Действие</th>
+                                    <th class="log-table__cell log-table__cell_header">Начало</th>
+                                    <th class="log-table__cell log-table__cell_header">Конец</th>
+                                    <th class="log-table__cell log-table__cell_header">Длительность</th>
+                                    <th class="log-table__cell log-table__cell_header">Работа двигателя на хх</th>
+                                    <th class="log-table__cell log-table__cell_header">Работа двигателя под нагрузкой
+                                    </th>
+                                    <th class="log-table__cell log-table__cell_header">Скорость средняя</th>
+                                    <th class="log-table__cell log-table__cell_header">Пробег</th>
+                                </tr>
+                                <tr class="log-table__row">
+                                    <td class="log-table__cell">1</td>
+                                    <td class="log-table__cell">parking</td>
+                                    <td class="log-table__cell">15:00</td>
+                                    <td class="log-table__cell">23:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">10 км/ч</td>
+                                    <td class="log-table__cell">20 км</td>
+                                </tr>
+                                <tr class="log-table__row">
+                                    <td class="log-table__cell">2</td>
+                                    <td class="log-table__cell">parking</td>
+                                    <td class="log-table__cell">15:00</td>
+                                    <td class="log-table__cell">23:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">10 км/ч</td>
+                                    <td class="log-table__cell">20 км</td>
+                                </tr>
+                                <tr class="log-table__row">
+                                    <td class="log-table__cell">3</td>
+                                    <td class="log-table__cell">parking</td>
+                                    <td class="log-table__cell">15:00</td>
+                                    <td class="log-table__cell">23:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">10 км/ч</td>
+                                    <td class="log-table__cell">20 км</td>
+                                </tr>
+                                <tr class="log-table__row">
+                                    <td class="log-table__cell">4</td>
+                                    <td class="log-table__cell">parking</td>
+                                    <td class="log-table__cell">15:00</td>
+                                    <td class="log-table__cell">23:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">10 км/ч</td>
+                                    <td class="log-table__cell">20 км</td>
+                                </tr>
+                                <tr class="log-table__row">
+                                    <td class="log-table__cell">5</td>
+                                    <td class="log-table__cell">parking</td>
+                                    <td class="log-table__cell">15:00</td>
+                                    <td class="log-table__cell">23:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">08:00</td>
+                                    <td class="log-table__cell">10 км/ч</td>
+                                    <td class="log-table__cell">20 км</td>
+                                </tr>
+                            </table>
+                        </div>
                         <ul class="charts-form__info-list">
                             <li class="charts-form__info-item">
                                 <p class="charts-form__info-title">Общее время анализа</p>
@@ -213,7 +216,7 @@
                                         href="https://yandex.ru/maps/20/arhangelsk/?ll=40.516939%2C64.539393&utm_medium=mapframe&utm_source=maps&z=13"
                                         style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс.Карты —
                                         поиск мест и адресов, городской транспорт</a><iframe
-                                        src="https://yandex.ru/map-widget/v1/-/CVTWu4Lj" width="100%" height="401"
+                                        src="https://yandex.ru/map-widget/v1/-/CVTWu4Lj" width="100%" height="100%"
                                         frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
                                 </div>
                             </section>
@@ -364,7 +367,7 @@
                                         <p class="stats__value">00:00:00</p>
                                     </div>
                                 </li>
-                            </ul>   
+                            </ul>
                         </section>
                         <section class="chart chart_bar">
                             <div id="chart-bar" class="chart__bar"></div>
